--- a/encryption.xml.in
+++ b/encryption.xml.in
@@ -12,7 +12,7 @@
         <_title>encryption</_title>
         <_description>Discover basic encryption method</_description>
         <_prerequisite></_prerequisite>
-        <_goal>To teach the basic substitution cipher technique</_goal>
+        <_goal>Goal of this activity is to teach the basic substitution cipher technique. Encryption is the method in which the message or information (referred to as plaintext) is changed into an unreadable ciphertext. Each character in the alphabet is assigned with a key(number/character/symbol), based on the key the plain text message is converted to cipher/encrypted text.</_goal>
         <_manual>Player must refer to key table present at the top of screen and match the alphabets with the keys</_manual>
         <_credit></_credit>
   </Board>
